# API-de-livros

./: README.md  celery_app.py  docker-compose.yml  kafka_producer.py  livros.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_livros.py
