[project]
name = "projeto-python"
version = "0.1.0"
description = ""
authors = [
    {name = "gui"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "fastapi[all] (>=0.135.3,<0.136.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "kafka-python-ng (>=2.2.3,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = ["."]
[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)"
]
